Grace/tests/gibbs/errors/z1001.grace
// ERROR = P1004
var x:=-1
